--- a/doraemon/doraemon.css
+++ b/doraemon/doraemon.css
@@ -192,11 +192,13 @@ div.eye_right {
 }
 
 #mouth {
-	width: 240px;
+	width: 200px;
 	height: 500px;
+	border-bottom: 3px solid #333;
+	-webkit-border-radius: 120px;
 	position: absolute;
 	top: -263px;
-	left: 36px;
+	left: 56px;
 	z-index: 10;
 }
 
@@ -220,6 +222,8 @@ x:indeterminate {
 	position: relative;
 	width: 170px;
 	height: 150px;
+	-moz-border-radius: 85px;
+	-webkit-border-radius: 85px;
 	border-radius: 85px;
 	border: 3px solid #000;
 	background: #FFF;
